set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )

add_subdirectory(c1_hello)
add_subdirectory(c1_opcode)
add_subdirectory(c1_bandwidthTest)
add_subdirectory(c2_measure_exectime)
add_subdirectory(c2_nsight_dbg)
add_subdirectory(c2_nsight_profile_basic)
add_subdirectory(c3_reduction)
add_subdirectory(c3_shuffle)
add_subdirectory(c4_aos)
add_subdirectory(c4_fp16)
add_subdirectory(c4_global_mem)
add_subdirectory(c8_simpleGL)
add_subdirectory(lab1)